--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   ],
   "dependencies": {
     "bindings": "~1.3.0",
-    "node-addon-api": "^1.0.0"
+    "node-addon-api": "^1.0.0",
+    "yargs": "^11.0.0"
   },
   "devDependencies": {
     "grunt": "~1.0.1",
