--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lora-comms",
   "description": "Read and write packets on a LoRa gateway",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/davedoesdev/node-lora-comms",
   "author": {
     "name": "David Halls",
@@ -31,8 +31,7 @@
   ],
   "dependencies": {
     "bindings": "~1.3.0",
-    "node-addon-api": "^1.2.0",
-    "yargs": "^11.0.0"
+    "node-addon-api": "^1.2.0"
   },
   "devDependencies": {
     "grunt": "~1.0.2",
@@ -46,6 +45,7 @@
     "documentation": "~6.1.0",
     "coveralls": "~3.0.0",
     "lora-packet": "^0.7.5",
-    "awaitify-stream": "^1.0.1"
+    "awaitify-stream": "^1.0.1",
+    "yargs": "^11.0.0"
   }
 }
