--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lora-comms",
   "description": "Read and write packets on a LoRa gateway",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "homepage": "https://github.com/davedoesdev/node-lora-comms",
   "author": {
     "name": "David Halls",
@@ -30,22 +30,22 @@
     "packet"
   ],
   "dependencies": {
-    "bindings": "~1.3.0",
-    "node-addon-api": "^1.2.0"
+    "bindings": "^1.5.0",
+    "node-addon-api": "^2.0.0"
   },
   "devDependencies": {
-    "grunt": "~1.0.2",
-    "grunt-eslint": "~20.1.0",
-    "grunt-mocha-test": "~0.13.3",
-    "grunt-exec": "~3.0.0",
-    "mocha": "~5.0.4",
-    "chai": "~4.1.2",
-    "nyc": "~11.4.1",
-    "babel-eslint": "~8.2.2",
-    "documentation": "~6.1.0",
-    "coveralls": "~3.0.0",
-    "lora-packet": "^0.7.5",
-    "awaitify-stream": "^1.0.1",
-    "yargs": "^11.0.0"
+    "grunt": "^1.0.4",
+    "grunt-eslint": "^22.0.0",
+    "grunt-mocha-test": "^0.13.3",
+    "grunt-exec": "^3.0.0",
+    "mocha": "^7.1.0",
+    "chai": "^4.2.0",
+    "nyc": "^15.0.0",
+    "babel-eslint": "^10.1.0",
+    "documentation": "^12.1.4",
+    "coveralls": "^3.0.9",
+    "lora-packet": "^0.7.14",
+    "awaitify-stream": "^1.0.2",
+    "yargs": "^15.1.0"
   }
 }
