--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: npx grunt lint
 
       - name: Coverage
-        run: npm run coverage --simulate
+        run: npx run coverage --simulate
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
