--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Update APT
+        run: sudo apt update
+
+      - name: Install OS dependencies
+        run: sudo apt install lcov
+
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
