--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      UV_THREADPOOL_SIZE: 100
+
     strategy:
       matrix:
         node-version: [12, 14, 16]
